--- a/SAM/Method pySAM SAM.html
+++ b/SAM/Method pySAM SAM.html
@@ -14658,19 +14658,19 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray1_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray1_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray2_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray2_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray3_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray3_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray4_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; subarray4_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; ur_enable_billing_demand 0
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; ur_billing_demand_minimum 100
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; ur_billing_demand_lookback_period 11
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]
-&lt;Pvsamv1 object at 0x0000023EE2113300&gt; ur_dc_billing_demand_periods [[1, 1], [2, 1]]
+<pre>&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray1_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray1_slope_azm 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray2_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray2_slope_azm 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray3_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray3_slope_azm 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray4_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; subarray4_slope_azm 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; ur_enable_billing_demand 0
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; ur_billing_demand_minimum 100
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; ur_billing_demand_lookback_period 11
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]
+&lt;Pvsamv1 object at 0x000002125C33B990&gt; ur_dc_billing_demand_periods [[1, 1], [2, 1]]
 </pre>
 </div>
 </div>
@@ -14951,7 +14951,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[13]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[12]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Row 2</span>
@@ -14974,7 +14974,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[14]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[13]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">dfAll</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">()</span>
@@ -15060,19 +15060,19 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray1_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray1_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray2_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray2_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray3_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray3_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray4_slope_tilt 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; subarray4_slope_azm 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; ur_enable_billing_demand 0
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; ur_billing_demand_minimum 100
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; ur_billing_demand_lookback_period 11
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]
-&lt;Pvsamv1 object at 0x0000023EEB5D2C00&gt; ur_dc_billing_demand_periods [[1, 1], [2, 1]]
+<pre>&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray1_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray1_slope_azm 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray2_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray2_slope_azm 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray3_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray3_slope_azm 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray4_slope_tilt 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; subarray4_slope_azm 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; ur_enable_billing_demand 0
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; ur_billing_demand_minimum 100
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; ur_billing_demand_lookback_period 11
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]
+&lt;Pvsamv1 object at 0x000002127F4BE0F0&gt; ur_dc_billing_demand_periods [[1, 1], [2, 1]]
 </pre>
 </div>
 </div>
@@ -15086,7 +15086,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[15]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[14]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">dfAll</span>
@@ -15107,7 +15107,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-OutputArea-child">
 
     
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[15]:</div>
+    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[14]:</div>
 
 
 
@@ -15250,22 +15250,23 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 </div>
 
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h1 id="Variables-to-explore-SAM-models">Variables to explore SAM models<a class="anchor-link" href="#Variables-to-explore-SAM-models">&#182;</a></h1><ul>
+<li>sky_model = 0 for Isotropic, 1 for HDKR, 2 for Perez</li>
+<li>irrad_mod = 0 DNI + GHI, 1 DNI + GHI, 2 GHI + DHI, 3 POA Ref cell, 4 POA pyr</li>
+</ul>
+<p>use_wf_albedo
+use_spatial_albedos</p>
 
-     </div>
 </div>
 </div>
 </div>
-
 </div>
 </body>
 
